# web-server

./: .gitignore  CMakeLists.txt  README.md  server.config
include/: config.h  handler.h  server.h  thread_pool.h
resources/: index.html
src/: config.cpp  handler.cpp  main.cpp  server.cpp  thread_pool.cpp
